fix: dark mode on page transitions

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,7 @@
 
 @layer theme {
 	.dark {
-		--color-background: oklch(0.145 0 0);
+		--color-background: oklch(0.205 0 0);
 		--color-foreground: oklch(0.985 0 0);
 		--color-muted: oklch(0.269 0 0);
 		--color-muted-foreground: oklch(0.708 0 0);
